Fixed image issue on safari

--- a/matatu/client/src/styles/App.css
+++ b/matatu/client/src/styles/App.css
@@ -75,3 +75,8 @@ h6 {
   margin: 0;
   color: white;
 }
+
+img {
+  max-height: 50%;
+  max-width: 50%;
+}
